# isabelle-Master-thesis-code

./: .gitignore  Global.py  Main.py  Material.xlsx  Material_Treatment_Data.py  Process_Caracteristic.xlsx  Supplier.xlsx  modularsystem.py  module.py  requirements.txt
gateway/: pyproject.toml
main/: README.md  global.py  init_db.py  isabelle.code-workspace  main.py  material_treatment_data.py  modularsystem.py  module.py  processes_treatment_data.py  pyproject.toml
main/data/: LCI_Processes.xlsx  Process-EF.xlsx
parsingservice/: go.mod
